# AdvancedComputing

./: .gitattributes  .gitignore  README.md
docs/.library/: preamble.tex  style.tex  title.tex
docs/lab1/: lab1.tex
docs/lab1/OpenCL/: OpenCL.tex
docs/lab1/OpenMP/: OpenMP.tex
docs/lab1/SSE-AVX/: SSE-AVX.tex
docs/lab1/introduction/: introduction.tex
docs/lab2/: lab2.sublime-project  lab2.tex
docs/lab2/Conclusion/: Conclusion.tex
docs/lab2/Contrast-enhancement/: Contrast-enhancement.tex
docs/lab3/: lab3.sublime-project  lab3.tex
docs/template/: template.tex
scripts/: lab1_partA.m  sync-ce-cuda01.sh  sync-ce-tesla.sh
src/Lab 1/: .build-all.ps1  .rebuild-all.ps1  DoublePrecision.props  Lab 1.sln  MSBuild.csproj  OpenCL.props  SharedPropertySheet.props  build-all.ps1
src/Lab 2/: .trace.nvprof.em3F3I  BasicProfiling.nvact  FLOPSProfiling.nvact  Lab 2.sln  PreprocessorDefines.props  SharedPropertySheet.props  makefile  schedule-script.sh
src/Lab 2/benchmark/: CMakeLists.txt  benchmark-linux.vcxproj  benchmark-linux.vcxproj.filters  benchmark.vcxproj  benchmark.vcxproj.filters  checkCudaCall.h  main.cpp  result_container.cpp  result_container.h
src/Lab 2/benchmark/cpu/: cpu-contrast.cpp  cpu-grayscale.cpp  cpu-histogram.cpp  cpu-kernels.h  cpu-smooth.cpp
src/Lab 2/benchmark/cuda/: cuda-contrast.cu  cuda-grayscale.cu  cuda-histogram.cu  cuda-kernels.h  cuda-smooth.cu
src/Lab 3/: Lab 3.sln  PreprocessorDefines.props  SharedPropertySheet.props  makefile  run-both.ps1  schedule-script.sh
src/Template/: Template.sln
src/jpeg-9b/: jpeg.vcxproj
(+184 files in other folders)
